# theremin

./: .gitignore  LICENSE.txt  README.md  cabinet.html  encoders.html  index.html  oscillators.html  shield.html
css/: styles.css
fpga/bcpu/: bcpu.xpr  bcpu_design_notes.md
fpga/bcpu16/: bcpu16.xpr  bcpu16_isa.xlsx
fpga/oversampling_sensor/: oversampling_sensor.xpr
fpga/theremin_hw/: theremin_hw.xpr
fpga/theremin_io/: theremin_io.xpr
fpga/theremin_sensor_pll/: theremin_sensor_pll.xpr
fpga/xorsensor/: xorsensor.xpr
hardware/oscillator/: 2018_09_colpitts_npn_oscillator_v3.asc  npn_oscillator_2018_v6.dip
misc/sensor-simulation/: .project
teensy4theremin/firmware/simulator/: Arduino.h  CMakeLists.txt  ILI9341_t3.h  ILI9341_t3_sim.cpp  Print.cpp  SPI.h  SPI_sim.cpp  WString.cpp  audiogen.cpp  audiogen.h  audioplayer.h  avr_functions.h  codeutils.cpp  encoder_widget.h  lcd_simulator.cpp  lcd_simulator.h  main.cpp  mainwindow.cpp  mainwindow.h  nonstd.c  pedal_widget.h  pins_arduino.h  reg_value_widget.cpp  run_cmake.bat  simulator_impl.cpp  simulator_impl.h  teensy4_theremin_sim.pro  theremin_sensor_simulator.cpp  theremin_sensor_simulator.h
teensy4theremin/firmware/simulator/arduino/: Arduino.h
teensy4theremin/kicad/: teensy4_pins_layout.xlsx
teensy4theremin/ltspice/: 2019_analog_oscill_sin_33v_noise_test_v01.asc  2019_analog_oscill_sin_33v_noise_test_v02.asc  2019_analog_oscill_sin_33v_noise_test_v03.asc  2019_analog_oscill_sin_33v_v01.asc  2019_analog_oscill_sin_33v_v02.asc  2019_npn_square_latch_heter.asc  2020_2g04_oscil_adg721_mixer_divider_v1.asc  2020_2g04_oscil_adg721_mixer_v1.asc  2020_2g04_oscill_analog_switch_heter_v01.asc  2020_2g04_oscill_analog_switch_heter_vs_xor_v01.asc  2020_2g04_oscill_v01.asc  2020_2g04_oscill_v02.asc  2020_analog_oscill_npn_experiments_33v_v05.asc  2020_analog_oscill_sin_33v_v03.asc  2020_analog_oscill_sin_33v_v04.asc  2020_analog_oscill_sin_33v_v05.asc  2020_analog_oscill_sin_33v_v05_heter.asc  2020_analog_oscill_sin_33v_v06_heter.asc  2020_analog_oscill_sin_33v_v07_heter.asc  2020_analog_oscill_sin_33v_v08_heter.asc  2020_analog_oscill_sin_33v_v09_heter.asc  2020_analog_theremin_v01.asc  2020_analog_theremin_v02.asc  2020_current_sense_ad6362_v01.asc  2020_current_sense_ad6362_v02.asc  2020_current_sense_bjt_v01.asc  (+191 more)
(+499 files in other folders)
